--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="inner_padding">8dp</dimen>
+    <dimen name="cover_size_mini">40dp</dimen>
+    <dimen name="fab_vertical_margin">-20dp</dimen>
 </resources>
