--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -78,5 +78,11 @@
 
     </LinearLayout>
 
+    <jp.ac.titech.itpro.sdl.runmusic.view.GraphView
+        android:id="@+id/graph_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
 
 </LinearLayout>
