--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -7,12 +7,18 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+    <TextView
+        android:id="@+id/duration_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="335"/>
+
     <com.andremion.music.MusicCoverView
         android:id="@+id/cover"
         android:layout_width="match_parent"
         android:layout_centerInParent="true"
         android:scaleType="centerInside"
-        android:src="@drawable/album_cover_daft_punk"
+        android:src="@drawable/album_cover_default"
         android:transitionName="@string/transition_name_cover"
         app:layout_heightPercent="35%"
         app:shape="circle" />
