--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -8,6 +8,11 @@
     android:fitsSystemWindows="true">
 
     <TextView
+        android:id="@+id/music_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+    <TextView
         android:id="@+id/duration_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
