--- a/app/src/main/res/layout/content_list.xml
+++ b/app/src/main/res/layout/content_list.xml
@@ -114,15 +114,24 @@
             android:text="102 songs"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
 
+        <TextView
+            android:id="@+id/bpm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BPM"
+            android:textSize="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
         <ImageView
             android:id="@+id/options"
             android:layout_width="@dimen/design_fab_size_mini"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
-            android:src="@drawable/ic_more_vert_white_24dp"/>
+            android:src="@drawable/ic_more_vert_white_24dp"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
 
